descripcion alt imagenes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <main>
         <div class="colorFondoNaranja imgContainer">
-            <img class="tamImgAuto" src="./img/kop/kop naranja letras.jpg" alt="imagen del logotipo en naranja">
+            <img class="tamImgAuto" src="./img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag" id="main_index_verde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">RECOMENDADOS DEL DÍA </h1>
