--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -50,7 +50,7 @@
 
     <main>
         <div class=" colorFondoNaranja imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag colorFondoVerde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">BEBIDAS</h1>
@@ -67,7 +67,7 @@
                     experiencia inolvidable.</h2>
             </div>
             <div class="bebidas__BoxEsclavo" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                <img class="imgBebida  shadow-drop-2-bottom" src="../img/bebidas/licuados.png" alt="">
+                <img class="imgBebida  shadow-drop-2-bottom" src="../img/bebidas/licuados.png" alt="Jarra de pomelada casera con menta y hielo, en la mano de una persona que trabaja en la cafeteria.">
                 <h2 class="bebidas__padMar">Licuados</h2>
                 <div>
                     <ul class="bebidas__padMar">
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="bebidas__BoxEsclavo" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/cerveza.png" alt="">
+                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/cerveza.png" alt="Copa de cerveza Stella Artois recien servida con espuma cayendo por el borne hasta la mitad de la copa.">
                 <h2 class="bebidas__padMar">Bebidas</h2>
                 <div>
                     <ul class="bebidas__padMar">
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="bebidas__BoxEsclavo" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/cafes.png" alt="">
+                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/cafes.png" alt="Jarra de acerro inoxidable con leche, elavorando un de café capuchino en una taza perfectamente preparada. La taza con una capa espumosa de leche y un patrón de arte latte en la parte superior. La taza esta sostenida con la mano izquierda del barista.">
                 <h2 class="bebidas__padMar">Cafés</h2>
                 <div>
                     <ul class="bebidas__padMar">
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="bebidas__BoxEsclavo" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/coctel.png" alt="">
+                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/coctel.png" alt="Gin Tonic con frutos rojos servida en una elegante copa de cristal, decorada con una fresca frambuesa cruzada con un pincho de cobre, esto ultimo sobre el borde de la copa. La copa está  iluminada a contraluz.">
                 <h2 class="bebidas__padMar">Coctelería</h2>
                 <div>
                     <ul class="bebidas__padMar">
