--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -53,7 +53,7 @@
 
     <main>
         <div class=" colorFondoNaranja imgContainer">
-            <img class="tamImgAuto " src="../img/kop/kop naranja letras.jpg" alt="">
+            <img class="tamImgAuto " src="../img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag colorFondoVerde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">BENEFICIOS CLUB KOP</h1>
@@ -63,14 +63,14 @@
             <ul class="main__flexCardEsclavo">
                 <li>
                     <div class="boxEsclavo" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
-                        <img class="imgRecomDia shadow-drop-2-bottom" src="../img/club/limo.jpg" alt="">
+                        <img class="imgRecomDia shadow-drop-2-bottom" src="../img/club/limo.jpg" alt="Vaso de limonada casera con rodajas de limón y hielo, decorado con hojas de menta fresca en un día soleado de verano.">
                         <h2>Dscto. 20%</h2>
                         <p>Miércoles, Jueves y Viernes en Limonadas.</p>
                     </div>
                 </li>
                 <li>
                     <div class="boxEsclavo" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100">
-                        <img class="imgRecomDia shadow-drop-2-bottom" src="../img/club/cafe2.jpg" alt="">
+                        <img class="imgRecomDia shadow-drop-2-bottom" src="../img/club/cafe2.jpg" alt="Jarra de acerro inoxidable con leche, elavorando un de café capuchino en una taza perfectamente preparada. La taza con una capa espumosa de leche y un patrón de arte latte en la parte superior. La taza esta sostenida con la mano izquierda del barista.">
                         <h2>Dscto. 15%</h2>
                         <p>Todos los dias en Café Espresso y Cortado.</p>
                     </div>
