--- a/paginas/salados.html
+++ b/paginas/salados.html
@@ -50,7 +50,7 @@
 
     <main>
         <div class=" colorFondoNaranja imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag colorFondoVerde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">SALADOS</h1>
@@ -68,7 +68,7 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/sand_veggie.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/sand_veggie.jpg" alt="Sandwich veggie con pan shoku, relleno de hojas frescas de espinaca, suave queso brie, rodajas de zapallo asado tierno y una capa abundante de alioli casero.">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Sandwich Veggie</h3>
@@ -80,7 +80,7 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/sandwich.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/sandwich.jpg" alt="Imagen de un exquisito sandwich veggie en pan brioche, relleno de tomates secos hidratados que aportan un sabor dulce y concentrado. Sobre los tomates se encuentra una capa fresca de rúcula, que proporciona un toque de frescura y un ligero sabor picante. También se aprecian las aceitunas negras finamente picadas, que aportan un contraste salado y sabroso. Además, se observa una variada mezcla de quesos, incluyendo mozzarella, cheddar y queso feta, que proporcionan una textura suave y cremosa a cada bocado del sandwich.">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Tostado Italiano</h3>
@@ -92,7 +92,7 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/medialuna_jyq.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/medialuna_jyq.jpg" alt="Imagen de una deliciosa media luna rellena de jamón ahumado y láminas de queso fundido. La media luna muestra una masa dorada y crujiente, rellena generosamente con lonchas de jamón ahumado de sabor intenso y suculento. ">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Media Luna J&Q</h3>
@@ -104,7 +104,7 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/trisq_palta.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/trisq_palta.jpg" alt="Imagen de un tostado italiano en pan de masa madre, con una generosa capa de palta fresca esparcida uniformemente sobre la superficie del pan. Se aprecia también una capa de hummus clásico extendido con suavidad sobre la palta, aportando una textura suave y un sabor agradablemente cremoso. Además, se pueden observar los tomates confitados, añadiendo un toque de dulzura y una textura suave y jugosa al tostado. Sobre el conjunto se rocía un delicado chorro de aceite de oliva con especias, realzando los sabores y proporcionando un toque aromático adicional.">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Trisqueta de Palta</h3>
@@ -117,7 +117,7 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/fosforito.jpg" alt="">
+                            <img class="imgSalado" src="../img/salados/fosforito.jpg" alt="Un delicioso Fosforito relleno de queso brie, pastron y pepinitos encurtidos, envuelto en una masa hojaldrada agridulce y horneado hasta alcanzar un dorado perfecto. Al morderlo, se experimenta una explosión de sabores, donde el queso derretido se combina con el sabor salado del pastron y la frescura de los pepinitos. Este plato es un equilibrio exquisito entre lo dulce y lo salado, ofreciendo una experiencia gastronómica irresistible para los amantes de los contrastes de sabores.">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Fosforito KOP</h3>
