--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="../css/style.css">
     <title>KOP Coffee co. - Cafe, un mimo al alma - Bebidas</title>
-    <meta name="description" content="Bienvenido a nuestro oasis gastronómico, donde la pasión por el café de especialidad se combina con una exquisita selección de pastelería dulce y salada, así como una cautivadora variedad de coctelería de la casa. Deleita tu paladar con una fusión de sabores, desde tentadoras tartas y pasteles artesanales hasta suculentos bocadillos salados, cuidadosamente elaborados para satisfacer todos los antojos. Nuestros mixólogos expertos te sorprenderán con innovadoras creaciones de cócteles, fusionando ingredientes frescos con destilados de calidad superior, para ofrecerte una experiencia de bebidas única y emocionante. Disfruta de un ambiente acogedor y un servicio excepcional mientras te sumerges en una experiencia gastronómica inolvidable en nuestra cafetería de especialidad." />
-    <meta name="keywords" content="Café, Coffee, dulces, salados, club de café, bebidas, café de especialidad, café de alta calidad, pastelería artesanal, coctelería de autor, cafetería acogedora, ambiente relajante, sabores exquisitos, baristas expertos, mezclas de café únicas, bebidas innovadoras, deleite culinario, café gourmet, experiencia gastronómica" />
+    <meta name="description"
+        content="Bienvenido a nuestro oasis gastronómico, donde la pasión por el café de especialidad se combina con una exquisita selección de pastelería dulce y salada, así como una cautivadora variedad de coctelería de la casa. Deleita tu paladar con una fusión de sabores, desde tentadoras tartas y pasteles artesanales hasta suculentos bocadillos salados, cuidadosamente elaborados para satisfacer todos los antojos. Nuestros mixólogos expertos te sorprenderán con innovadoras creaciones de cócteles, fusionando ingredientes frescos con destilados de calidad superior, para ofrecerte una experiencia de bebidas única y emocionante. Disfruta de un ambiente acogedor y un servicio excepcional mientras te sumerges en una experiencia gastronómica inolvidable en nuestra cafetería de especialidad." />
+    <meta name="keywords"
+        content="Café, Coffee, dulces, salados, club de café, bebidas, café de especialidad, café de alta calidad, pastelería artesanal, coctelería de autor, cafetería acogedora, ambiente relajante, sabores exquisitos, baristas expertos, mezclas de café únicas, bebidas innovadoras, deleite culinario, café gourmet, experiencia gastronómica" />
 </head>
 
 <body>
@@ -50,7 +52,8 @@
 
     <main>
         <div class=" colorFondoNaranja imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg"
+                alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag colorFondoVerde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">BEBIDAS</h1>
@@ -67,7 +70,8 @@
                     experiencia inolvidable.</h2>
             </div>
             <div class="bebidas__BoxEsclavo" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                <img class="imgBebida  shadow-drop-2-bottom" src="../img/bebidas/licuados.png" alt="Jarra de pomelada casera con menta y hielo, en la mano de una persona que trabaja en la cafeteria.">
+                <img class="imgBebida  shadow-drop-2-bottom" src="../img/bebidas/licuados.png"
+                    alt="Jarra de pomelada casera con menta y hielo, en la mano de una persona que trabaja en la cafeteria.">
                 <h2 class="bebidas__padMar">Licuados</h2>
                 <div>
                     <ul class="bebidas__padMar">
@@ -80,7 +84,8 @@
                 </div>
             </div>
             <div class="bebidas__BoxEsclavo" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/cerveza.png" alt="Copa de cerveza Stella Artois recien servida con espuma cayendo por el borne hasta la mitad de la copa.">
+                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/cerveza.png"
+                    alt="Copa de cerveza Stella Artois recien servida con espuma cayendo por el borne hasta la mitad de la copa.">
                 <h2 class="bebidas__padMar">Bebidas</h2>
                 <div>
                     <ul class="bebidas__padMar">
@@ -93,7 +98,8 @@
                 </div>
             </div>
             <div class="bebidas__BoxEsclavo" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/cafes.png" alt="Jarra de acerro inoxidable con leche, elavorando un de café capuchino en una taza perfectamente preparada. La taza con una capa espumosa de leche y un patrón de arte latte en la parte superior. La taza esta sostenida con la mano izquierda del barista.">
+                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/cafes.png"
+                    alt="Jarra de acerro inoxidable con leche, elavorando un de café capuchino en una taza perfectamente preparada. La taza con una capa espumosa de leche y un patrón de arte latte en la parte superior. La taza esta sostenida con la mano izquierda del barista.">
                 <h2 class="bebidas__padMar">Cafés</h2>
                 <div>
                     <ul class="bebidas__padMar">
@@ -107,7 +113,8 @@
                 </div>
             </div>
             <div class="bebidas__BoxEsclavo" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/coctel.png" alt="Gin Tonic con frutos rojos servida en una elegante copa de cristal, decorada con una fresca frambuesa cruzada con un pincho de cobre, esto ultimo sobre el borde de la copa. La copa está  iluminada a contraluz.">
+                <img class="imgBebida shadow-drop-2-bottom" src="../img/bebidas/coctel.png"
+                    alt="Gin Tonic con frutos rojos servida en una elegante copa de cristal, decorada con una fresca frambuesa cruzada con un pincho de cobre, esto ultimo sobre el borde de la copa. La copa está  iluminada a contraluz.">
                 <h2 class="bebidas__padMar">Coctelería</h2>
                 <div>
                     <ul class="bebidas__padMar">
@@ -124,7 +131,7 @@
         <div>
             <a href="#arriba"><img width="50" height="50"
                     src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
-                    style="position: fixed;bottom: 50px;right: 50px;" /></a>
+                    style="position: fixed;bottom: 50px;right: 70px;" /></a>
         </div>
     </main>
 
