--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/style.css">
     <title>KOP Coffee co. - Cafe, un mimo al alma -Dulces </title>
-    <meta name="description" content="Bienvenido a nuestro oasis gastronómico, donde la pasión por el café de especialidad se combina con una exquisita selección de pastelería dulce y salada, así como una cautivadora variedad de coctelería de la casa. Deleita tu paladar con una fusión de sabores, desde tentadoras tartas y pasteles artesanales hasta suculentos bocadillos salados, cuidadosamente elaborados para satisfacer todos los antojos. Nuestros mixólogos expertos te sorprenderán con innovadoras creaciones de cócteles, fusionando ingredientes frescos con destilados de calidad superior, para ofrecerte una experiencia de bebidas única y emocionante. Disfruta de un ambiente acogedor y un servicio excepcional mientras te sumerges en una experiencia gastronómica inolvidable en nuestra cafetería de especialidad." />
-    <meta name="keywords" content="Café, Coffee, dulces, salados, club de café, bebidas, café de especialidad, café de alta calidad, pastelería artesanal, coctelería de autor, cafetería acogedora, ambiente relajante, sabores exquisitos, baristas expertos, mezclas de café únicas, bebidas innovadoras, deleite culinario, café gourmet, experiencia gastronómica" />
+    <meta name="description"
+        content="Bienvenido a nuestro oasis gastronómico, donde la pasión por el café de especialidad se combina con una exquisita selección de pastelería dulce y salada, así como una cautivadora variedad de coctelería de la casa. Deleita tu paladar con una fusión de sabores, desde tentadoras tartas y pasteles artesanales hasta suculentos bocadillos salados, cuidadosamente elaborados para satisfacer todos los antojos. Nuestros mixólogos expertos te sorprenderán con innovadoras creaciones de cócteles, fusionando ingredientes frescos con destilados de calidad superior, para ofrecerte una experiencia de bebidas única y emocionante. Disfruta de un ambiente acogedor y un servicio excepcional mientras te sumerges en una experiencia gastronómica inolvidable en nuestra cafetería de especialidad." />
+    <meta name="keywords"
+        content="Café, Coffee, dulces, salados, club de café, bebidas, café de especialidad, café de alta calidad, pastelería artesanal, coctelería de autor, cafetería acogedora, ambiente relajante, sabores exquisitos, baristas expertos, mezclas de café únicas, bebidas innovadoras, deleite culinario, café gourmet, experiencia gastronómica" />
 </head>
 
 <body>
@@ -50,7 +52,8 @@
 
     <main>
         <div class=" colorFondoNaranja imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg"
+                alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag colorFondoVerde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">DULCES</h1>
@@ -69,7 +72,8 @@
                     <div class="dulces__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgDulces" src="../img/dulces/keylime.jpg" alt="La tarta se presenta con una base de galleta triturada y mantequilla, sobre la cual se extiende un relleno suave y cremoso de lima key, conocida por su sabor distintivo y refrescante. La superficie de la tarta está adornada con ralladura de lima y una capa ligera de crema batida.">
+                            <img class="imgDulces" src="../img/dulces/keylime.jpg"
+                                alt="La tarta se presenta con una base de galleta triturada y mantequilla, sobre la cual se extiende un relleno suave y cremoso de lima key, conocida por su sabor distintivo y refrescante. La superficie de la tarta está adornada con ralladura de lima y una capa ligera de crema batida.">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Key Lime</h3>
@@ -82,7 +86,8 @@
                     <div class="dulces__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgDulces" src="../img/dulces/cheesecake.png" alt="Un delicioso Cheesecake de Frutos Rojos servido en un elegante plato de greda. El cheesecake está decorado con una capa de frutos rojos frescos que incluyen fresas, frambuesas y arandanos, creando un contraste vibrante con el suave y cremoso relleno de queso. La base de galleta crujiente es visible en la parte inferior, proporcionando una textura complementaria al postre.">
+                            <img class="imgDulces" src="../img/dulces/cheesecake.png"
+                                alt="Un delicioso Cheesecake de Frutos Rojos servido en un elegante plato de greda. El cheesecake está decorado con una capa de frutos rojos frescos que incluyen fresas, frambuesas y arandanos, creando un contraste vibrante con el suave y cremoso relleno de queso. La base de galleta crujiente es visible en la parte inferior, proporcionando una textura complementaria al postre.">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Cheesecake</h3>
@@ -95,7 +100,8 @@
                     <div class="dulces__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgDulces" src="../img/dulces/alfajores.png" alt="Imagen de un delicioso alfajor, un dulce tradicional de Argentina. El alfajor se compone de dos galletas suaves unidas por un dulce relleno de dulce de leche, decorada con almendras.">
+                            <img class="imgDulces" src="../img/dulces/alfajores.png"
+                                alt="Imagen de un delicioso alfajor, un dulce tradicional de Argentina. El alfajor se compone de dos galletas suaves unidas por un dulce relleno de dulce de leche, decorada con almendras.">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Alfajores</h3>
@@ -108,7 +114,8 @@
                     <div class="dulces__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgDulces" src="../img/dulces/rogel.png" alt="Imagen de una exquisita torta Rogel, un postre tradicional de América Latina. La torta se compone de múltiples capas de finas y crujientes masas de hojaldre, intercaladas con generosas porciones de dulce de leche espeso y suave. La parte superior de la torta está decorada con una capa de merengue delicadamente tostado, que aporta una textura ligera y un contraste de sabor con el dulce de leche.">
+                            <img class="imgDulces" src="../img/dulces/rogel.png"
+                                alt="Imagen de una exquisita torta Rogel, un postre tradicional de América Latina. La torta se compone de múltiples capas de finas y crujientes masas de hojaldre, intercaladas con generosas porciones de dulce de leche espeso y suave. La parte superior de la torta está decorada con una capa de merengue delicadamente tostado, que aporta una textura ligera y un contraste de sabor con el dulce de leche.">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Torta Rogel</h3>
@@ -122,7 +129,7 @@
         <div>
             <a href="#arriba"><img width="50" height="50"
                     src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
-                    style="position: fixed;bottom: 50px;right: 50px;" /></a>
+                    style="position: fixed;bottom: 50px;right: 70px;" /></a>
         </div>
     </main>
 
