--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
     <main>
         <div class="colorFondoNaranja imgContainer">
-            <img class="tamImgAuto" src="./img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
+            <img class="tamImgAuto" src="./img/kop/kop naranja letras.jpg"
+                alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag" id="main_index_verde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">RECOMENDADOS DEL DÍA </h1>
@@ -136,20 +137,21 @@
             </div>
             <div>
                 <h2 class="colorCrema posH2">INGRESA A CLUB KOP</h2>
-                <form action="./paginas/clubkop.html" method="post" enctype="" >
-                        <ul  class="clubkop__listCenter">
-                            <li class="clubkop__listCenter">
-                                <label for="name" name="name" class="colorCrema_op">Usuario</label>
-                                <input type="email" name="email" id="" placeholder="correo@kop.com" class="intxt" required>
-                            </li>
-                            <li class="clubkop__listCenter">
-                                <label for="name" name="name" class="colorCrema_op">Contraseña</label>
-                                <input type="password" name="password" class="intxt" placeholder="Ingresa tu Contraseña" id="" required>
-                            </li>
-                            <li class="clubkop__listCenter">
-                                <input type="submit" class="boton txtBoton colorCrema" value="INGRESAR">
-                            </li>
-                        </ul>
+                <form action="./paginas/clubkop.html" method="post" enctype="">
+                    <ul class="clubkop__listCenter">
+                        <li class="clubkop__listCenter">
+                            <label for="name" name="name" class="colorCrema_op">Usuario</label>
+                            <input type="email" name="email" id="" placeholder="correo@kop.com" class="intxt" required>
+                        </li>
+                        <li class="clubkop__listCenter">
+                            <label for="name" name="name" class="colorCrema_op">Contraseña</label>
+                            <input type="password" name="password" class="intxt" placeholder="Ingresa tu Contraseña"
+                                id="" required>
+                        </li>
+                        <li class="clubkop__listCenter">
+                            <input type="submit" class="boton txtBoton colorCrema" value="INGRESAR">
+                        </li>
+                    </ul>
                 </form>
             </div>
         </section>
