--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -53,7 +53,8 @@
 
     <main>
         <div class=" colorFondoNaranja imgContainer">
-            <img class="tamImgAuto " src="../img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
+            <img class="tamImgAuto " src="../img/kop/kop naranja letras.jpg"
+                alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag colorFondoVerde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">BENEFICIOS CLUB KOP</h1>
@@ -63,14 +64,16 @@
             <ul class="main__flexCardEsclavo">
                 <li>
                     <div class="boxEsclavo" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
-                        <img class="imgRecomDia shadow-drop-2-bottom" src="../img/club/limo.jpg" alt="Vaso de limonada casera con rodajas de limón y hielo, decorado con hojas de menta fresca en un día soleado de verano.">
+                        <img class="imgRecomDia shadow-drop-2-bottom" src="../img/club/limo.jpg"
+                            alt="Vaso de limonada casera con rodajas de limón y hielo, decorado con hojas de menta fresca en un día soleado de verano.">
                         <h2>Dscto. 20%</h2>
                         <p>Miércoles, Jueves y Viernes en Limonadas.</p>
                     </div>
                 </li>
                 <li>
                     <div class="boxEsclavo" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100">
-                        <img class="imgRecomDia shadow-drop-2-bottom" src="../img/club/cafe2.jpg" alt="Jarra de acerro inoxidable con leche, elavorando un de café capuchino en una taza perfectamente preparada. La taza con una capa espumosa de leche y un patrón de arte latte en la parte superior. La taza esta sostenida con la mano izquierda del barista.">
+                        <img class="imgRecomDia shadow-drop-2-bottom" src="../img/club/cafe2.jpg"
+                            alt="Jarra de acerro inoxidable con leche, elavorando un de café capuchino en una taza perfectamente preparada. La taza con una capa espumosa de leche y un patrón de arte latte en la parte superior. La taza esta sostenida con la mano izquierda del barista.">
                         <h2>Dscto. 15%</h2>
                         <p>Todos los dias en Café Espresso y Cortado.</p>
                     </div>
@@ -94,15 +97,18 @@
                             <ul class="clubkop__listCenter">
                                 <li class="clubkop__listCenter">
                                     <label for="name" name="name" class="colorCrema_op">Nombre Completo</label>
-                                    <input type="text" name="name" id="" placeholder="Nombre Apellido" class="intxt" required>
+                                    <input type="text" name="name" id="" placeholder="Nombre Apellido" class="intxt"
+                                        required>
                                 </li>
                                 <li class="clubkop__listCenter">
                                     <label for="name" name="name" class="colorCrema_op">Correo Electrónico</label>
-                                    <input type="email" name="email" id="" placeholder="correo@kop.com" class="intxt" required>
+                                    <input type="email" name="email" id="" placeholder="correo@kop.com" class="intxt"
+                                        required>
                                 </li>
                                 <li class="clubkop__listCenter">
                                     <label for="name" name="name" class="colorCrema_op">Contraseña</label>
-                                    <input type="password" name="Contraseña" placeholder="Define tu Contraseña" class="intxt" id="" required>
+                                    <input type="password" name="Contraseña" placeholder="Define tu Contraseña"
+                                        class="intxt" id="" required>
                                 </li>
                                 <li class="clubkop__listCenter">
                                     <input type="submit" class="boton txtBoton colorCrema" value="INSCRIBIRME">
@@ -116,7 +122,7 @@
         <div>
             <a href="#arriba"><img width="50" height="50"
                     src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
-                    style="position: fixed;bottom: 50px;right: 50px;" /></a>
+                    style="position: fixed;bottom: 50px;right: 70px;" /></a>
         </div>
     </main>
 
