--- a/paginas/salados.html
+++ b/paginas/salados.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="../css/style.css">
     <title>KOP Coffee co. - Cafe, un mimo al alma - Salados </title>
-    <meta name="description" content="Bienvenido a nuestro oasis gastronómico, donde la pasión por el café de especialidad se combina con una exquisita selección de pastelería dulce y salada, así como una cautivadora variedad de coctelería de la casa. Deleita tu paladar con una fusión de sabores, desde tentadoras tartas y pasteles artesanales hasta suculentos bocadillos salados, cuidadosamente elaborados para satisfacer todos los antojos. Nuestros mixólogos expertos te sorprenderán con innovadoras creaciones de cócteles, fusionando ingredientes frescos con destilados de calidad superior, para ofrecerte una experiencia de bebidas única y emocionante. Disfruta de un ambiente acogedor y un servicio excepcional mientras te sumerges en una experiencia gastronómica inolvidable en nuestra cafetería de especialidad." />
-    <meta name="keywords" content="Café, Coffee, dulces, salados, club de café, bebidas, café de especialidad, café de alta calidad, pastelería artesanal, coctelería de autor, cafetería acogedora, ambiente relajante, sabores exquisitos, baristas expertos, mezclas de café únicas, bebidas innovadoras, deleite culinario, café gourmet, experiencia gastronómica" />
+    <meta name="description"
+        content="Bienvenido a nuestro oasis gastronómico, donde la pasión por el café de especialidad se combina con una exquisita selección de pastelería dulce y salada, así como una cautivadora variedad de coctelería de la casa. Deleita tu paladar con una fusión de sabores, desde tentadoras tartas y pasteles artesanales hasta suculentos bocadillos salados, cuidadosamente elaborados para satisfacer todos los antojos. Nuestros mixólogos expertos te sorprenderán con innovadoras creaciones de cócteles, fusionando ingredientes frescos con destilados de calidad superior, para ofrecerte una experiencia de bebidas única y emocionante. Disfruta de un ambiente acogedor y un servicio excepcional mientras te sumerges en una experiencia gastronómica inolvidable en nuestra cafetería de especialidad." />
+    <meta name="keywords"
+        content="Café, Coffee, dulces, salados, club de café, bebidas, café de especialidad, café de alta calidad, pastelería artesanal, coctelería de autor, cafetería acogedora, ambiente relajante, sabores exquisitos, baristas expertos, mezclas de café únicas, bebidas innovadoras, deleite culinario, café gourmet, experiencia gastronómica" />
 </head>
 
 <body>
@@ -50,7 +52,8 @@
 
     <main>
         <div class=" colorFondoNaranja imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="imagen logotipo del nombre del cafe en color naranja">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg"
+                alt="imagen logotipo del nombre del cafe en color naranja">
         </div>
         <div class="tituloPag colorFondoVerde">
             <h1 class="colorCrema tamGrande focus-in-contract-bck">SALADOS</h1>
@@ -68,7 +71,8 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/sand_veggie.jpg" alt="Sandwich veggie con pan shoku, relleno de hojas frescas de espinaca, suave queso brie, rodajas de zapallo asado tierno y una capa abundante de alioli casero.">
+                            <img class="imgSalado" src="../img/salados/sand_veggie.jpg"
+                                alt="Sandwich veggie con pan shoku, relleno de hojas frescas de espinaca, suave queso brie, rodajas de zapallo asado tierno y una capa abundante de alioli casero.">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Sandwich Veggie</h3>
@@ -80,7 +84,8 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/sandwich.jpg" alt="Imagen de un exquisito sandwich veggie en pan brioche, relleno de tomates secos hidratados que aportan un sabor dulce y concentrado. Sobre los tomates se encuentra una capa fresca de rúcula, que proporciona un toque de frescura y un ligero sabor picante. También se aprecian las aceitunas negras finamente picadas, que aportan un contraste salado y sabroso. Además, se observa una variada mezcla de quesos, incluyendo mozzarella, cheddar y queso feta, que proporcionan una textura suave y cremosa a cada bocado del sandwich.">
+                            <img class="imgSalado" src="../img/salados/sandwich.jpg"
+                                alt="Imagen de un exquisito sandwich veggie en pan brioche, relleno de tomates secos hidratados que aportan un sabor dulce y concentrado. Sobre los tomates se encuentra una capa fresca de rúcula, que proporciona un toque de frescura y un ligero sabor picante. También se aprecian las aceitunas negras finamente picadas, que aportan un contraste salado y sabroso. Además, se observa una variada mezcla de quesos, incluyendo mozzarella, cheddar y queso feta, que proporcionan una textura suave y cremosa a cada bocado del sandwich.">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Tostado Italiano</h3>
@@ -92,7 +97,8 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/medialuna_jyq.jpg" alt="Imagen de una deliciosa media luna rellena de jamón ahumado y láminas de queso fundido. La media luna muestra una masa dorada y crujiente, rellena generosamente con lonchas de jamón ahumado de sabor intenso y suculento. ">
+                            <img class="imgSalado" src="../img/salados/medialuna_jyq.jpg"
+                                alt="Imagen de una deliciosa media luna rellena de jamón ahumado y láminas de queso fundido. La media luna muestra una masa dorada y crujiente, rellena generosamente con lonchas de jamón ahumado de sabor intenso y suculento. ">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Media Luna J&Q</h3>
@@ -104,7 +110,8 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-left" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/trisq_palta.jpg" alt="Imagen de un tostado italiano en pan de masa madre, con una generosa capa de palta fresca esparcida uniformemente sobre la superficie del pan. Se aprecia también una capa de hummus clásico extendido con suavidad sobre la palta, aportando una textura suave y un sabor agradablemente cremoso. Además, se pueden observar los tomates confitados, añadiendo un toque de dulzura y una textura suave y jugosa al tostado. Sobre el conjunto se rocía un delicado chorro de aceite de oliva con especias, realzando los sabores y proporcionando un toque aromático adicional.">
+                            <img class="imgSalado" src="../img/salados/trisq_palta.jpg"
+                                alt="Imagen de un tostado italiano en pan de masa madre, con una generosa capa de palta fresca esparcida uniformemente sobre la superficie del pan. Se aprecia también una capa de hummus clásico extendido con suavidad sobre la palta, aportando una textura suave y un sabor agradablemente cremoso. Además, se pueden observar los tomates confitados, añadiendo un toque de dulzura y una textura suave y jugosa al tostado. Sobre el conjunto se rocía un delicado chorro de aceite de oliva con especias, realzando los sabores y proporcionando un toque aromático adicional.">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Trisqueta de Palta</h3>
@@ -117,7 +124,8 @@
                     <div class="salados__boxEsclavo shadow-drop-2-bottom" data-aos="fade-right" data-aos-duration="1000"
                         data-aos-delay="100">
                         <div>
-                            <img class="imgSalado" src="../img/salados/fosforito.jpg" alt="Un delicioso Fosforito relleno de queso brie, pastron y pepinitos encurtidos, envuelto en una masa hojaldrada agridulce y horneado hasta alcanzar un dorado perfecto. Al morderlo, se experimenta una explosión de sabores, donde el queso derretido se combina con el sabor salado del pastron y la frescura de los pepinitos. Este plato es un equilibrio exquisito entre lo dulce y lo salado, ofreciendo una experiencia gastronómica irresistible para los amantes de los contrastes de sabores.">
+                            <img class="imgSalado" src="../img/salados/fosforito.jpg"
+                                alt="Un delicioso Fosforito relleno de queso brie, pastron y pepinitos encurtidos, envuelto en una masa hojaldrada agridulce y horneado hasta alcanzar un dorado perfecto. Al morderlo, se experimenta una explosión de sabores, donde el queso derretido se combina con el sabor salado del pastron y la frescura de los pepinitos. Este plato es un equilibrio exquisito entre lo dulce y lo salado, ofreciendo una experiencia gastronómica irresistible para los amantes de los contrastes de sabores.">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Fosforito KOP</h3>
@@ -130,7 +138,7 @@
         <div>
             <a href="#arriba"><img width="50" height="50"
                     src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
-                    style="position: fixed;bottom: 50px;right: 50px;" /></a>
+                    style="position: fixed;bottom: 50px;right: 70px;" /></a>
         </div>
     </main>
 
