--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -119,11 +119,11 @@
                 </li>
             </ul>
         </section>
-        <div>
+        <!-- <div>
             <a href="#arriba"><img width="50" height="50"
                     src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
                     style="position: fixed;bottom: 50px;right: 70px;" /></a>
-        </div>
+        </div> -->
     </main>
 
     <footer class="footer__master colorFondoCrema">
