--- a/paginas/salados.html
+++ b/paginas/salados.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <div id="arriba" class="header__menuNav">
+        <div class="header__menuNav">
             <div>
                 <img class="header__logo" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="100"
                     src="../img/kop/kop logo crema.jpg"
