--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <div id="arriba" class="header__menuNav">
+        <div class="header__menuNav">
             <div>
                 <img class="header__logo" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-delay="100"
                     src="./img/kop/kop logo crema.jpg"
@@ -135,31 +135,28 @@
                     </li>
                 </ul>
             </div>
-            <div>
-                <h2 class="colorCrema posH2">INGRESA A CLUB KOP</h2>
-                <form action="./paginas/clubkop.html" method="post" enctype="">
+            <div class="colorCrema posH2" >
+                <h2  id="contenedorUsuario" class="colorCrema posH2">INGRESA A CLUB KOP</h2>
+                <!-- <form action="./paginas/clubkop.html" method="post" enctype=""> -->
                     <ul class="clubkop__listCenter">
                         <li class="clubkop__listCenter">
                             <label for="name" name="name" class="colorCrema_op">Usuario</label>
-                            <input type="email" name="email" id="" placeholder="correo@kop.com" class="intxt" required>
+                            <input name="usuario" id="user" placeholder="Nombre Usuario" class="intxt" required>
                         </li>
                         <li class="clubkop__listCenter">
                             <label for="name" name="name" class="colorCrema_op">Contraseña</label>
                             <input type="password" name="password" class="intxt" placeholder="Ingresa tu Contraseña"
-                                id="" required>
+                                id="password" required>
                         </li>
                         <li class="clubkop__listCenter">
-                            <input type="submit" class="boton txtBoton colorCrema" value="INGRESAR">
+                            <!-- <button id="btn-iniciar">INGRESAR</button> -->
+                            <button class="boton txtBoton colorCrema" id="btn-iniciar">INGRESAR</button>
+                             <!-- <input type="submit" class="boton txtBoton colorCrema" value="INGRESAR" id="btn-iniciar"> -->
                         </li>
                     </ul>
-                </form>
+                <!-- </form> -->
             </div>
         </section>
-        <!-- <div>
-            <a href="#arriba"><img width="50" height="50"
-                    src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
-                    style="position: fixed;bottom: 50px;right: 70px;" /></a>
-        </div> -->
     </main>
 
     <footer class="footer__master colorFondoCrema">
@@ -210,6 +207,7 @@
     <script>
         AOS.init();
     </script>
+     <script src="./js/index.js"></script>
 </body>
 
 </html>
