--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
 
         <section class="tamClubVerde clubkop__flex">
-            <div class="clubkop__formCenter">
+            <div class="clubkop__formCenter" id="contenedorUsuario" >
                 <h2 class="colorCrema tamGrande focus-in-contract-bck">CLUB KOP</h2>
                 <h2 class="colorCrema posH2">¡UNITE A NOSOTROS!</h2>
                 <h2 class="clubkop_Subtitulo" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
